@@ -7,7 +7,7 @@ function [im_out] = foveate(im_in, flag, struct )
     [M,N,~] = size(im_in);
     
     if nargin < 3
-        fov_type = 'cortical';
+        fov_type = 'cortical_xavi';
         [oM,oN,~] = size(im_in);
         
         fixationY = round(oM/2);
@@ -39,8 +39,7 @@ function [im_out] = foveate(im_in, flag, struct )
     end
     
     
-    cM = oM*4;
-    cN = oN*4;
+    cN = 1024;
             
     switch flag
         case 0 %distort
@@ -50,27 +49,31 @@ function [im_out] = foveate(im_in, flag, struct )
             case 'fisheye'
                 im_out = distort_fisheye(im_in); 
             case 'cortical'
-                [im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
-                im_out = distort_cortex(im_in,fixationY,fixationX); 
+                %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+                im_out = distort_cortex(im_in,fixationY,fixationX,cN,pi); 
             case 'cortical_xavi'
-                [im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
-                im_out = mapImage2Cortex(im_in,pi,cM,cN,fixationX,fixationY);
+                %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+                for c=1:size(im_in,3)
+                    im_out(:,:,c) = mapImage2Cortex(im_in(:,:,c),pi,cN,fixationX,fixationY);
+                end
             otherwise
-               [im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+               %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
                im_out = distort_cortex(im_in,fixationY,fixationX); 
             end
         case 1 %undistort
             switch fov_type
                 case 'cortical'
                         
-                    im_out = undistort_cortex(im_in,fixationY,fixationX); 
-                    [im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
+                    im_out = undistort_cortex(im_in,fixationY,fixationX,oM,oN,pi); 
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
                 case 'cortical_xavi'
-                    im_out = mapCortex2Image(im_in,pi,M,N,fixationX,fixationY);
-                    [im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
+                    for c=1:size(im_in,3)
+                        im_out(:,:,c) = mapCortex2Image(im_in(:,:,c),pi,oM,oN,fixationX,fixationY);
+                    end
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
                 otherwise
                     im_out = undistort_cortex(im_in,fixationY,fixationX); 
-                    [im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
             end
         otherwise
             %do nothing
