@@ -4,10 +4,12 @@
 function [im_out] = foveate(im_in, flag, struct )
 
     im_in = double(im_in);
+    [M,N,~] = size(im_in);
     
     if nargin < 3
-        fov_type = 'cortical';
+        fov_type = 'cortical_xavi';
         [oM,oN,~] = size(im_in);
+        
         fixationY = round(oM/2);
         fixationX = round(oN/2);
         
@@ -22,6 +24,8 @@ function [im_out] = foveate(im_in, flag, struct )
     fixationX = struct.image.fixationX;
     oM = struct.image.M;
     oN = struct.image.N;
+    
+        
     end
     
     if oM == 0 || oN == 0
@@ -35,7 +39,7 @@ function [im_out] = foveate(im_in, flag, struct )
     end
     
     
-    
+    cN = 1024;
             
     switch flag
         case 0 %distort
@@ -45,25 +49,31 @@ function [im_out] = foveate(im_in, flag, struct )
             case 'fisheye'
                 im_out = distort_fisheye(im_in); 
             case 'cortical'
-                    %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
-                im_out = distort_cortex(im_in,fixationY,fixationX); 
+                %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+                im_out = distort_cortex(im_in,fixationY,fixationX,); 
             case 'cortical_xavi'
-                    %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
-                im_out = mapImage2Cortex(im_in,pi,1024,1024,round(oM/2),round(oN/2));
+                %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+                for c=1:size(im_in,3)
+                    im_out(:,:,c) = mapImage2Cortex(im_in(:,:,c),pi,cN,fixationX,fixationY);
+                end
             otherwise
-                    %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
+               %[im_in,fixationY,fixationX] = pad_image(im_in,fixationY,fixationX);
                im_out = distort_cortex(im_in,fixationY,fixationX); 
             end
         case 1 %undistort
             switch fov_type
                 case 'cortical'
-                        %[im_in,fixationY,fixationX] = unpad_image(im_in,fixationY,fixationX,oM,oN);
-                    im_out = undistort_cortex(im_in,fixationY,fixationX); 
+                        
+                    im_out = undistort_cortex(im_in,fixationY,fixationX,oM,oN,pi); 
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
                 case 'cortical_xavi'
-                    im_out = mapCortex2Image(im_in,pi,1024,1024,round(oM/2),round(oN/2));
+                    for c=1:size(im_in,3)
+                        im_out(:,:,c) = mapCortex2Image(im_in(:,:,c),pi,oM,oN,fixationX,fixationY);
+                    end
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
                 otherwise
-                     [im_in,fixationY,fixationX] = unpad_image(im_in,fixationY,fixationX,oM,oN);
-                   im_out = undistort_fovea(im_in,fixationY,fixationX); 
+                    im_out = undistort_cortex(im_in,fixationY,fixationX); 
+                    %[im_out,~,~] = unpad_image(im_out,fixationY,fixationX,oM,oN);
             end
         otherwise
             %do nothing
